--- a/book/development.ini
+++ b/book/development.ini
@@ -24,7 +24,8 @@ pyramid.includes =
 
 [server:main]
 use = egg:waitress#main
-listen = 127.0.0.1:6543 [::1]:6543
+# listen = 127.0.0.1:6543 [::1]:6543
+listen = 0.0.0.0:6543 [::1]:6543
 
 ###
 # logging configuration
